# movie-system

./: .gitignore  ER.drawio  README.md
movie-backend/: pyproject.toml  requirements.txt
movie-backend/app/: database.py  main.py
movie-backend/app/api/v1/: api.py  dependencies.py
movie-backend/app/api/v1/endpoints/: actors.py  comments.py  directors.py  movies.py  ratings.py  users.py
movie-backend/app/core/: config.py  security.py
movie-backend/app/crud/: crud_actor.py  crud_comment.py  crud_director.py  crud_movie.py  crud_rating.py  crud_user.py  crud_view.py
movie-backend/app/models/: actor_model.py  comment_model.py  director_model.py  movie_model.py  rating_model.py  user_model.py  view_models.py
movie-backend/app/schemas/: actor_schema.py  comment_schema.py  director_schema.py  movie_schema.py  rating_schema.py  user_schema.py  view_schemas.py
movie-backend/db-init/: ActorsInit.sql  DirectorsInit.sql  MoviesInit.sql  createDatabase.sql  createTable.sql  otherInit.sql  uploadImage.sql  userInit.sql
movie-backend/db-init/Procedure/: SP_AddNewMovieWithDetails.sql
movie-backend/db-init/Trigger/: Ratingcalcu.sql  TRG_LogMovieChanges.sql
movie-backend/db-init/view/: V_MovieDetails.sql
movie-backend/test/: main.py  test.py
movie-frontend/: next.config.ts  package-lock.json  package.json
movie-frontend/src/app/: globals.css  layout.tsx  page.tsx
movie-frontend/src/components/: AvatarUploader.tsx  CommentSection.tsx  FormattedDate.tsx  Header.tsx  MovieCard.tsx  Rating.tsx  RatingSection.tsx  SearchBar.tsx
流程图/: 流程图.drawio
(+16 files in other folders)
